@@ -18,16 +18,6 @@
     </parent>
 
     <properties>
-        <surefire.skipTests>false</surefire.skipTests>
-        <surefire.forkCount>1</surefire.forkCount>
-        <surefire.include>*</surefire.include>
-        <surefire.exclude/>
-        <surefire.groups/>
-        <surefire.excludedGroups/>
-        <surefire.maxMemorySize>1024m</surefire.maxMemorySize>
-        <surefire.maxPermSize>512m</surefire.maxPermSize>
-        <surefire.defaultLogLevel>warn</surefire.defaultLogLevel>
-
         <jacoco.destFile>${project.build.directory}/coverage-reports/jacoco.exec</jacoco.destFile>
         <jacoco.outputDirectory>${project.reporting.outputDirectory}/jacoco</jacoco.outputDirectory>
     </properties>
@@ -36,20 +26,9 @@
         <dependency>
             <groupId>com.sap.cloud.s4hana.examples</groupId>
             <artifactId>address-manager-application</artifactId>
-            <classifier>classes</classifier>
             <version>1.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.sap.cloud.s4hana.cloudplatform</groupId>
-            <artifactId>scp-cf</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.sap.cloud.s4hana</groupId>
-            <artifactId>s4hana-all</artifactId>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>com.sap.cloud.s4hana</groupId>
             <artifactId>testutil</artifactId>
@@ -62,36 +41,18 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>io.rest-assured</groupId>
-            <artifactId>rest-assured</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.openejb</groupId>
-            <artifactId>arquillian-tomee-embedded</artifactId>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.openejb</groupId>
-            <artifactId>tomee-embedded</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-jdk14</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.apache.openejb</groupId>
-            <artifactId>tomee-jaxrs</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test-autoconfigure</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -124,31 +85,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20</version>
-                <configuration>
-                    <argLine>@{argLine}
-                        -Xmx${surefire.maxMemorySize}
-                        -XX:MaxPermSize=${surefire.maxPermSize}
-                        -Dorg.slf4j.simpleLogger.defaultLogLevel=${surefire.defaultLogLevel}
-                        -Djava.io.tmpdir=target/arquillian-working-dir/${surefire.forkNumber}/
-                    </argLine>
-                    <skipTests>${surefire.skipTests}</skipTests>
-                    <includes>
-                        <include>${surefire.include}</include>
-                    </includes>
-                    <excludes>
-                        <exclude>${surefire.exclude}</exclude>
-                    </excludes>
-                    <forkCount>${surefire.forkCount}</forkCount>
-                    <reuseForks>false</reuseForks>
-                    <groups>${surefire.groups}</groups>
-                    <excludedGroups>${surefire.excludedGroups}</excludedGroups>
-                </configuration>
             </plugin>
         </plugins>
     </build>
